<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">7铁</string>
    <!--开发-->
    <!--<string name="host">http://api0.bjcathay.com:81</string>-->
    <!--<string name="img_host">http://api0.bjcathay.com:81</string>-->
    <!--<string name="pay_notify_url">http://api0.bjcathay.com:81/api/alipay_notify_url</string>-->
    <!--运营-->
     <!--<string name="host">http://api.7tiegolf.com</string>-->
     <!--<string name="img_host">http://image.7tiegolf.com</string>-->
    <!--<string name="pay_notify_url">http://api.7tiegolf.com/api/alipay_notify_url</string>-->
    <!--预发布-->
      <string name="host">http://api.qt.bjcathay.com</string>
      <string name="img_host">http://image.qt.bjcathay.com</string>
    <string name="pay_notify_url">http://api.qt.bjcathay.com/api/alipay_notify_url</string>
    <!-- 运营 v1(新版后台-->
    <!--<string name="host">http://v1.api.7tiegolf.com</string>-->
    <!--<string name="img_host">http://image.7tiegolf.com</string>-->
    <!--<string name="pay_notify_url">http://v1.api.7tiegolf.com/api/alipay_notify_url</string>-->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="order_sure_instruction">提交订单后客服将与球场进行订单确认，确认后将在15分钟内通知您进行付款。</string>
    <string name="order_cancale_instruction">取消或修改订单需提前24小时，24小时内取消仅退还80%。</string>
    <string name="order_tuan_sure_instruction">本次团购是满20人方可享受优惠价格，若在限定时间内没能达到20人，我们将会全额返还您的订场费用。赶快好友约起来吧~</string>
    <string name="order_tuan_cancale_instruction">取消或修改订单需提前24小时，24小时内取消仅退还80%。</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <string name="forget_secret"><u>忘记密码？</u></string>
    <string name="register_invate_note">邀请码</string>
    <string name="usable_user_number">果岭币</string>

    <!-- 日期时间选择 -->
    <string name="order_sucess_to_show_order"><u>查看订单</u>
      </string>
    <string name="order_sucess_to_show_order_note">点击查看订单详细内容</string>
    <string name="order_sucess_to_show_place"><u>看看其他</u>
       </string>
    <string name="order_sucess_to_share_friend"><u>分享给好友</u>
       </string>
    <string name="order_sucess_to_show_place_note">发现更多场地</string>
    <string name="order_sucess_to_notice_friend">通知好友场地信息</string>
    <!--成功提示-->
    <string name="order_com_suc_note_a">客服确认完成后．若出现信息冲突，客服会及时给你回访，</string>
    <string name="order_com_suc_note_b">7铁高尔夫客服电话:</string>
    <string name="service_tel"><u>4006099977</u></string>
    <string name="service_tel_format"><u>400-609-9977</u></string>
    <string name="order_success_tuan_share"><u>分享给好友</u></string>
     <string name="order_sucess_to_send_to_friend"><u>赠送朋友</u>
      </string>
    <string name="order_sucess_to_send_to_my_friend"><u>我的兑换</u>
      </string>
    <string name="order_sucess_to_check_my_friend">查看我的兑换卡
      </string>
    <string name="order_sucess_to_show_share">和朋友一起分享赛事乐趣</string>
    <string name="order_sucess_to_invite_friend"><u>邀请朋友</u>
       </string>
    <string name="order_sucess_to_get_more">以获得更多丰富赛事兑换卡
       </string>
    <string name="click_to_share"><u>点击分享给朋友</u></string>


    <string name="empty_com_text">哎呀，您还没有赛事，赶快去参加吧～</string>
    <string name="empty_msg_text">哎呀，您还没有消息呢～</string>
    <string name="empty_order_text">哎呀，您还没有订单，赶快去下单吧～</string>
    <string name="empty_exchange_text">哎呀，您还没有“徽章”，赶紧邀请朋友赚果岭币吧！</string>
    <string name="empty_shop_text">一大波兑换卡即将来临～一起期待吧～</string>
    <string name="empty_free_compet_text">一大波赛事即将来临～一起期待吧～</string>
    <string name="empty_friend_text">哎呀，您的亲友团暂时没人，赶快去壮大吧～</string>
    <string name="empty_net_text">无网络，请您检查网络链接后重试</string>
    <string name="empty_sys_text">系统异常，请稍后重试</string>
    <string name="empty_pro_text">哎呀，产品下线啦...</string>
    <!--地址地图展示-->
    <!--http://map.baidu.com/mobile/-->

    <string name="course_address">http://api.map.baidu.com/marker?output=html</string>

    <string name="message_to_detail"><u>点击查看详情</u></string>
    <string name="dialog_to_exchange_a_card">您将兑换一枚%1$s兑换卡,本次兑换将消耗%2$d枚果岭币。</string>
    <string name="dialog_cant_to_exchange_a_card">您的果岭币不足，暂不能兑换哦~快去邀请亲友团捧场吧</string>
    <string name="dialog_cant_to_send_a_card">抱歉，用户\n%1$s\n不是我们的会员，无法赠送。</string>
    <string name="dialog_sure_to_send_a_card">您将把一枚%1$s送给你的小伙伴%2$s</string>
    <string name="what_is_glb">什么是果岭币</string>
    <string name="this_is_glb">果岭币是7铁赠送的虚拟货币，可兑换平台内不同级别的赛事资格。\n每个果岭币含金量约100~150元人民币。\n果岭币可以在7铁会员间相互馈赠。</string>
    <string name="how_to_get_glb">如何获得果岭币</string>
    <string name="this_way_to_get_glb">邀请一名球友注册7铁会员，并成功完成一次订场、打球，可获得一枚果岭币。</string>
    <string name="what_is_wallet">什么是钱包余额?</string>
    <string name="this_is_wallet">钱包余额是您在7铁的一个账户，如账户内有款项，下单时可以勾选使用，抵消部分订单总额。</string>
    <string name="wallet_note">提示：钱包余额仅支持最大化使用，请您酌情使用。</string>
    <string name="pay_success_note">请您在%1$s到%2$s球场尽情挥杆~</string>
    <string name="attend_success_note">您已成功报名%1$s.</string>
    <string name="copyright_text">copyright©2015  北京国泰银科科技有限公司  版权所有</string>
    <string name="share_with_friend_text">邀请您的小伙伴加入亲友团，根据您提供的邀请码注册，然后订场消费，即可完成捧场。同时您将成功获得一枚果岭币。当果岭币积累到一定数量，便可兑换各种类型的赛事卡，凭得到的赛事卡可以</string>
    <string name="share_with_friend_text_color"><font color='#FFAC41'>免费</font>参加诸如<font color='#FFAC41'>美国圆石滩邀请赛</font>之类的赛事。</string>
    <string name="history_clear">清除历史记录</string>
    <string name="update_note_message">\n您所使用的“7铁高尔夫”版本过低，继续使用可能会存在无法正确下单等问题，建议您升级到最新版本！</string>
    <string name="realtime_note">实时计价需要联系客服咨询Teetime价格哦~</string>
    <string name="image_view_tag">ImageViewAdapter</string>
    <string name="title_activity_about_wallet">AboutWalletActivity</string>
</resources>
