<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_color"
    android:orientation="vertical">

    <com.bjcathay.qt.view.TopView
        android:id="@+id/top_my_wallet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_wallet"
            android:textColor="@color/exchange_text_color"
            android:textSize="@dimen/sub_textSize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/this_is_wallet"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/sub_textSize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/wallet_note"
            android:textColor="@color/exchange_text_color"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>
