<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bjcathay.qt.view.TopView
        android:id="@+id/top_remind_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_title_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/remind_title"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="兑换成功！"
            android:layout_gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/remind_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sub_textSize"
        android:textColor="@color/exchange_text_color"
        android:text="兑换成功！"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sub_textSize"
            android:textColor="@color/exchange_text_color"
            android:text="@string/order_com_suc_note_b" />

        <TextView
            android:id="@+id/call_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_color"
            android:textSize="@dimen/sub_textSize"
            android:text="@string/service_tel"
            android:onClick="onClick"
            android:clickable="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textSize="@dimen/sub_textSize"
            android:textColor="@color/exchange_text_color"
            android:text="您还可以:" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/remind_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_sucess_to_send_to_friend"
                    android:textColor="@color/order_title_color"
                    android:textSize="15sp"
                    android:layout_gravity="left|center_vertical" />

                <TextView
                    android:id="@+id/remind_first_note"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_sucess_to_show_share"
                    android:textColor="@color/exchange_text_color"
                    android:textSize="14sp"
                    android:layout_gravity="left|center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/remind_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_sucess_to_invite_friend"
                    android:textColor="@color/order_title_color"
                    android:layout_gravity="left|center_vertical" />

                <TextView
                    android:id="@+id/remind_second_note"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/exchange_text_color"
                    android:textSize="14sp"
                    android:text="@string/order_sucess_to_get_more"
                    android:layout_gravity="left|center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>