<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bjcathay.qt.view.TopView
        android:id="@+id/top_order_suc_te_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_title_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/mian_text_color"
            android:text="抢单成功！"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/mian_text_color"
            android:text="客服与球场确认中.."
            android:layout_gravity="center" />
    </LinearLayout>

   <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_com_suc_note_a"
        android:textSize="13sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center"
        android:textColor="@color/exchange_text_color" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sub_textSize"
            android:textColor="@color/exchange_text_color"
            android:text="@string/order_com_suc_note_b" />

        <TextView
            android:id="@+id/call_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_color"
            android:textSize="@dimen/sub_textSize"
            android:text="@string/service_tel"
            android:onClick="onClick"
            android:clickable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textSize="@dimen/sub_textSize"
            android:textColor="@color/exchange_text_color"
            android:text="您还可以:" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_suc_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_sucess_to_show_order"
                    android:textColor="@color/home_title_color"
                    android:textSize="15sp"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:layout_gravity="left|center_vertical" />

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_sucess_to_show_order_note"
                    android:textSize="@dimen/sub_textSize"
                    android:textColor="@color/exchange_text_color"
                    android:layout_gravity="left|center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_suc_second"
                    android:textSize="15sp"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_sucess_to_show_place"
                    android:textColor="@color/home_title_color"
                    android:layout_gravity="left|center_vertical" />

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sub_textSize"
                    android:textColor="@color/exchange_text_color"
                    android:text="@string/order_sucess_to_show_place_note"
                    android:layout_gravity="left|center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>