<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_color"
    android:orientation="vertical">

    <com.bjcathay.qt.view.TopView
        android:id="@+id/top_my_wallet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/touying_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="钱包余额:"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/sub_textSize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥"
                android:textColor="@color/order_price_color"
                android:textSize="@dimen/sub_textSize" />

            <TextView
                android:id="@+id/wallet_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1480"
                android:textColor="@color/guolinbi_color"
                android:textSize="@dimen/sub_textSize" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/touying_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_wallet"
            android:textColor="@color/exchange_text_color"
            android:textSize="@dimen/main_textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/this_is_wallet"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/sub_textSize" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/touying_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/wallet_note"
        android:textColor="@color/exchange_text_color"
        android:textSize="@dimen/sub_textSize" />
</LinearLayout>